feat: implement m2 hard negative generation
